syntax = "proto3";

// Package common defines commonly used types agnostic to the node role on the Sonr network.
package sonrhq.common.v1;

option go_package = "github.com/sonrhq/core/pkg/common";

enum CoinType {
  CoinType_BITCOIN = 0; // 0x80000000
  CoinType_TESTNET = 1; // 0x80000001
  CoinType_LITECOIN = 2; // 0x80000002
  CoinType_DOGE = 3; // 0x80000003
  CoinType_ETHEREUM = 60; // 0x8000003c
  CoinType_SONR = 703; // 0x800002bf
}
